Translated all slides, fixed assembly example
Also fixed the hints document title.

--- a/hints.tex
+++ b/hints.tex
@@ -6,7 +6,7 @@
 \usepackage{listings}
 \usepackage{graphicx}
 
-\title{Uitwerkingen van Opgaven voor workshop Commodore 64}
+\title{Tips bij Opgaven voor workshop Commodore 64}
 \author{Folkert van Verseveld}
 
 \newcounter{problem}
