Translated all documents and added more content
Added a couple of images as well as extended the music content.
Some references at the end to pouet and hvsc (csdb still missing).

--- a/exercises.tex
+++ b/exercises.tex
@@ -136,6 +136,7 @@ dan kunnen we dit doen met de functie \verb:INT():.
 Bijvoorbeeld $\verb:PRINT:\ \verb:INT:(2/3)$ zal $0$ printen.
 
 Zoals u waarschijnlijk al is opgevallen is dat de basisoperatoren dezelfde prioriteit hebben als in de wiskunde.
+Let op dat er rekenmachines en computers waren stammend uit dezeflde tijd als de C64 die de prioriteit van operatoren kompleet negeerden!
 Met behulp van haakjes kunt u berekeningen in een andere volgorde uitvoeren.
 %Als u een te ingewikkelde formule invult zal de foutmelding \verb:FORMULA TOO COMPLEX: geprint worden.
 
@@ -171,7 +172,7 @@ Tot nu toe moesten we elke keer handmatig de BASIC commando's invullen.
 Dit werkt voor kleine probeelsels, maar voor echte serieuze projecten is dit niet praktisch.
 We gaan kijken hoe we ons eerste BASIC programma kunnen schrijven wat helemaal op zichzelf kan draaien zodra we hem RUNnen.
 
-Elke regel in een BASIC programma wordt voorafgegaan met een nummer.
+Elke regel in een BASIC programma wordt voorafgegaan met een uniek nummer.
 Dit is te vergelijken met een regelnummer.
 De BASIC interpreter gebruikt de regelnummers om te weten in welke volgorde het programma uitgevoerd moet worden.
 
