--- a/thanks_en.tex
+++ b/thanks_en.tex
@@ -87,6 +87,8 @@
 \begin{itemize}
 \item Bill Bertram
 \item Jozef Galanda
+% C1541 drive
+\item Nathan Beach
 % waveforms
 \item Omegatron
 % trs80 image author:
