--- a/workshop.tex
+++ b/workshop.tex
@@ -200,7 +200,7 @@
 \frametitle{Mini-mainframes}
 
 \begin{itemize}
-\item Duur, maar niet onbetaalbaar: \$10000+
+\item Duur, maar niet onbetaalbaar: \$10,000+
 \item Acceptabele performance
 \item `Gewone' klanten
 \end{itemize}
@@ -236,7 +236,7 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Eerste computers}
+\frametitle{Eerste Personal Computers}
 
 \begin{figure}
 \includegraphics[width=0.6\linewidth]{images/appleii.jpg}
@@ -247,7 +247,7 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Eerste computers}
+\frametitle{Eerste Personal Computers}
 
 \begin{figure}
 \includegraphics[width=0.75\linewidth]{images/trs80.jpg}
@@ -258,7 +258,7 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Eerste computers}
+\frametitle{Eerste Personal Computers}
 
 \begin{figure}
 \includegraphics[width=0.6\linewidth]{images/pet.jpg}
@@ -269,7 +269,7 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Eerste computers}
+\frametitle{Eerste Personal Computers}
 
 \begin{figure}
 \includegraphics[width=0.6\linewidth]{images/vic20.jpg}
@@ -280,7 +280,7 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Eerste computers}
+\frametitle{Eerste Personal Computers}
 
 \begin{figure}
 \includegraphics[width=0.6\linewidth]{images/ibm5150.jpg}
@@ -291,7 +291,7 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Eerste computers}
+\frametitle{Eerste Personal Computers}
 
 \begin{figure}
 \includegraphics[width=0.6\linewidth]{images/zxspectrum.jpg}
@@ -351,18 +351,6 @@
 1983 & NES & \$179 & \$433 & \$25-\$120 \\ \hline
 \end{tabular}
 
-%\begin{tabular}{|l|l|l|l|l|}
-%\hline Model & RAM & Geluid & \$ toen & \$ nu \\
-%%C64 & 64K & AD Synth. & \$595 - \$135 & \$595 \\
-%C64 & 64K & AD Synth. & \$595 & \$595 \\
-%Apple ][ & 8-16K & Beeper & \$1296 & \$1296 \\
-%IBM PC & 16K & Beeper & \$1565 & \$1565 \\
-%%IBM PC & 16-640 & Beeper & Ja & \$1565 \\
-%%ZX Spec. & 16 & Beeper & Nee & \pound 175 \\ \hline
-%ZX Spec. & 16K & Beeper & \pounds 175 & \pounds 175 pound \\ \hline
-%NES & 2K & Z80? & \$179 & \$433 \\ \hline
-%\end{tabular}
-
 \end{frame}
 
 %----------------------------------------------
@@ -372,7 +360,7 @@
 
 \begin{itemize}
 \item Niet nodig
-\item Te duur (+\$500/+\$2000)
+\item Te duur (+\$500/+\$2,000)
 \end{itemize}
 
 \end{frame}
@@ -515,8 +503,8 @@ NES & 2 & Ricoh 2A03 & 1.6 \\ \hline
 
 \begin{itemize}
 \item Zeer goedkoop en succesvol
-\item 6502, 6510, ricoh 2a03, \dots
-\item PET, VIC-20, C64, NES, \dots
+\item 6502, 6507, 6510, ricoh 2a03, \dots
+\item PET, VIC-20, C64, VCS, NES, \dots
 \item Embedded systems
 \end{itemize}
 
@@ -1261,6 +1249,30 @@ Source: Duce
 \item Oldskool computers
 \item Programmeerwedstrijden
 \item Cracking 'n Hacking
+\end{itemize}
+
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Pouet}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/pouet.jpg}
+\end{figure}
+
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Pouet}
+
+\begin{itemize}
+\item 92 platforms
+\item 36 categorie\"en
+\item Ongeveer 70,000 prods!
 \end{itemize}
 
 \end{frame}
