--- a/workshop_en.tex
+++ b/workshop_en.tex
@@ -52,7 +52,7 @@
 \begin{itemize}
 \item Very first `computers'
 \item Primarily built for Army, Universities or Government
-\item Spanning several rooms using enormous amount of electricity
+\item Spanning several rooms using enormous amounts of electricity
 \end{itemize}
 
 \end{frame}
@@ -86,7 +86,7 @@
 \frametitle{Military Applications}
 
 \begin{itemize}
-\item Artillery (projectiles)
+\item Artillery (trajectory of projectiles)
 \item Cryptography (enigma)
 \item OXO
 \end{itemize}
@@ -171,7 +171,7 @@
 \frametitle{Mini-mainframes}
 
 \begin{itemize}
-\item Expensive, but less than millions: \$10000+
+\item Expensive, but less than millions: \$10,000+
 \item Acceptable performance
 \item `Average' customers
 \end{itemize}
@@ -193,7 +193,7 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Introduction of Personal Computer}
+\frametitle{Introduction of the Personal Computer}
 
 \begin{itemize}
 \item Mini mainframe
@@ -330,7 +330,7 @@
 
 \begin{itemize}
 \item Don't need them
-\item Too expensive (+\$500/+\$2000)
+\item Too expensive (+\$500/+\$2,000)
 \end{itemize}
 
 \end{frame}
@@ -344,6 +344,17 @@
 \item Programs in RAM, firmware in ROM
 \item Power loss: program gone!
 \end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Tapes!}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/datasette.jpg}
+\end{figure}
 
 \end{frame}
 
@@ -368,8 +379,19 @@
 \begin{itemize}
 \item Clumsy
 \item Manually seek forward and rewind tape
-\item Analogue file table
+\item Analog file table
 \end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Floppies!}
+
+\begin{figure}
+\includegraphics[width=0.7\linewidth]{images/c1541.jpg}
+\end{figure}
 
 \end{frame}
 
@@ -473,8 +495,8 @@ NES & 2 & Ricoh 2A03 & 1.6 \\ \hline
 
 \begin{itemize}
 \item Really cheap and successful
-\item 6502, 6510, ricoh 2a03, \dots
-\item PET, VIC-20, C64, NES, \dots
+\item 6502, 6507, 6510, ricoh 2a03, \dots
+\item PET, VIC-20, C64, VCS, NES, \dots
 \item Embedded systems
 \end{itemize}
 
@@ -514,6 +536,17 @@ NES & 2 & Ricoh 2A03 & 1.6 \\ \hline
 \item Internet (using 50Kbps modem)
 \item Hardware upgrades
 \end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{What can you do on a C64?}
+
+\begin{figure}
+\includegraphics[width=0.8\linewidth]{images/performance.png}
+\end{figure}
 
 \end{frame}
 
@@ -714,7 +747,7 @@ rts & return; & End of procedure \\
 \frametitle{Audio}
 
 \begin{itemize}
-\item Analogue or Digital
+\item Analog or Digital
 \end{itemize}
 
 \begin{figure}
@@ -726,7 +759,7 @@ rts & return; & End of procedure \\
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Analoog Audio}
+\frametitle{Analog Audio}
 
 \begin{itemize}
 \item Not-electronic
@@ -741,7 +774,7 @@ rts & return; & End of procedure \\
 \frametitle{Digital Audio}
 
 \begin{itemize}
-\item Approximation of analogue
+\item Approximation of analog
 \item Amplitude jumps in levels
 \item Clearly visible with oscilloscope on old PCs
 \end{itemize}
@@ -849,7 +882,7 @@ rts & return; & End of procedure \\
 
 \begin{itemize}
 \item World's first audio synthesizer
-\item Analogue \emph{and} Digitaal
+\item Analog \emph{and} Digitaal
 \item Designer received different awards
 \item 6581 and 8580
 \item Timbaland plagiarism
@@ -926,11 +959,24 @@ NES & RP2A03 & 8-bit digital & 5 \\ \hline
 %----------------------------------------------
 
 \begin{frame}
+\frametitle{SID - Techniques}
+
+\begin{itemize}
+\item Pulse Width Modulation (PWM)
+\item Ring modulation (ring mod)
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
 \frametitle{SID - Examples}
 
 \begin{itemize}
-\item Driller
+\item Driller (PWM)
 \item Commando
+\item Zoids (ring mod)
 \end{itemize}
 
 \end{frame}
@@ -986,6 +1032,34 @@ Guess which music belongs to which machine!
 \item Click/pop-bug in 6581
 \item 4-bit PCM digital
 \end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{SID hacking - Arkanoid}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{images/farts.png}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{SID hacking - 6581 examples}
+
+\begin{tabular}{|l|l|l|}
+\hline Year & Artist & Title \\ \hline
+1987 & Martin Galway & Arkanoid \\
+1987 & Chris H\"ulsbeck & Dulcedo Cogitationis \\
+1988 & Jeroen Tel & Savage \\
+1989 & Jeroen Tel & Stormlord \\
+1989 & Jeroen Tel & Turbo Outrun \\
+1990 & J. Tel and C. H\"ulsbeck & Turrican \\ \hline
+\end{tabular}
 
 \end{frame}
 
@@ -1204,6 +1278,42 @@ Source: Duce
 \item Oldskool computers
 \item Programming Contests
 \item Cracking 'n Hacking
+\end{itemize}
+
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{HVSC}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/hvsc.jpg}
+\end{figure}
+
+\begin{itemize}
+\item 49542 SIDs
+\item About 1500 artists
+\item About 300MB
+\item This means about 6KB per SID!
+\item More than 16000 hours of music!
+\end{itemize}
+
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Pouet}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/pouet.jpg}
+\end{figure}
+
+\begin{itemize}
+\item 92 platforms
+\item 36 categories
+\item About 70,000 prods!
 \end{itemize}
 
 \end{frame}
